# parcel

./: .gitignore  Cargo.toml  out.prc  test.prctxt  test.prcx
src/: main.rs
