[package]
name = "parcel"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prcx = { git = "https://github.com/blu-dev/prcx", branch = "xml-style" }
# prcx = { path = "../prcx" }
structopt = "0.3.26"

[patch.crates-io]
prc-rs = { git = "https://github.com/blu-dev/prc-rs", branch = "comments-handled" }